--- a/README
+++ b/README
@@ -12,4 +12,7 @@
     2010/08/04  : Initial Commit. Nothing much here but a general outline that  
                   might very well not reflect the final 'stable'-release :)
 
+                  Using this as a first 'trial-and-error' get-to-know-git exercise
+                  with branches ;)
+
 
